option java_package = "edu.washington.escience.myriad.proto";
option java_outer_classname = "DataProto";

message DataMessage {
	enum Type{
		EOS = 0; // End of Stream
		NORMAL = 1; // Normal Data
		EOI = 2; // End of Iteration
    BOS = 3; // Begin of Stream, operatorID should be set for BOS messages
	}
	required DataMessage.Type type=1;
	optional uint64 operatorID = 2;
	repeated ColumnMessage columns = 3;
    optional uint32 num_tuples = 4;
    optional uint64 seq = 5;
}

message ColumnMessage {
  enum Type {
    INT		= 0;
    LONG	= 1;
    FLOAT	= 2;
    DOUBLE	= 3;
    STRING	= 4;
    BOOLEAN	= 5;
  }

  required ColumnMessage.Type type = 1;		// See enum above

  optional IntColumnMessage int_column = 3; 
  optional LongColumnMessage long_column = 4; 
  optional FloatColumnMessage float_column = 5; 
  optional DoubleColumnMessage double_column = 6; 
  optional StringColumnMessage string_column = 7; 
  optional BooleanColumnMessage boolean_column = 8; 
}

message IntColumnMessage {
  required bytes data = 1;
}

message LongColumnMessage {
  required bytes data = 1;
}

message FloatColumnMessage {
  required bytes data = 1;
}

message DoubleColumnMessage {
  required bytes data = 1;
}

message StringColumnMessage {
  required bytes data = 1;
  repeated int32 start_indices = 2;
  repeated int32 end_indices = 3;
}

message BooleanColumnMessage {
  required bytes data = 1;
}
