import "column.proto";
import "control.proto";
import "query.proto";

option java_package = "edu.washington.escience.myria.proto";
option java_outer_classname = "TransportProto";

message TransportMessage {
  enum Type {
    DATA	= 0;
    QUERY	= 1;
    CONTROL = 2;
  }
  
  required TransportMessage.Type type = 1;
  optional DataMessage dataMessage = 2;
  optional QueryMessage queryMessage = 3;
  optional ControlMessage controlMessage = 4;
}

